syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Calculator {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalculatorRequest {
  Calculator calculator = 1;
}

message CalculatorResponse {
  int32 result = 1;
}

service CalculatorService {
  rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {};
}